fix(backend): remove broken current_sends
